# my-fin-agent

./: .gitignore  CLAUDE.md  README.md  render.yaml  restart.sh  start.sh  stop.sh
backend/: .env.example  config.py  main.py  pyproject.toml
backend/agents/: prompts.py  router.py
backend/api/: routes.py
backend/knowledge_base/: earnings_reports.md  earnings_reports_zh.md  financial_basics.md  financial_basics_zh.md  market_concepts.md  market_concepts_zh.md  technical_analysis.md  technical_analysis_zh.md
backend/market/: __init__.py  finnhub_client.py  news_client.py  yfinance_client.py
backend/rag/: __init__.py  chunker.py  embeddings.py  ingest.py  pipeline.py  vector_store.py  web_search_client.py  wikipedia_client.py
backend/tests/: test_config.py  test_router.py  test_web_search_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatInterface.tsx  MarkdownRenderer.tsx  MarketDataCard.tsx  MessageBubble.tsx
